# AILearning

./: README.md  pyproject.toml  requirements.txt
1-LangChainBasics/: langchainbasics.ipynb  practice.ipynb  qachatbot.py
data/vector_store/f1e27a67-04ef-41c1-8010-33fe2762bf1c/: index_metadata.pickle
fastapi/: demo.py
rag-tutorial/: document.ipynb  job.ipynb  pdf_loader.ipynb
streamlit-basics/: basic1.py
tools integrtion/: langchainTool.ipynb
