[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.4",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
    "streamlit",
]
