[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "ddgs>=9.9.1",
    "faiss-cpu>=1.13.1",
    "fastapi[standard]>=0.122.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "streamlit",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
